--- a/expedia/notebook/PlotScatterPlotlib.ipynb
+++ b/expedia/notebook/PlotScatterPlotlib.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "train = pd.read_csv('/home/valerian/Projets/Projet_spe/projetspe/expedia/out_train.csv', iterator = True, chunksize = 100000)\n",
+    "train = pd.read_csv('../out_train.csv', iterator = True, chunksize = 100000)\n",
     "\n",
     "#à la volée \n",
     "for chunk in train :\n",
