--- a/expedia/notebook/scan_matthias.ipynb
+++ b/expedia/notebook/scan_matthias.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "train = pd.read_csv('out_train.csv')\n",
+    "train = pd.read_csv('../out_train.csv')\n",
     "\n",
     "train.head()"
    ]
