ajout des path vers les .csv

--- a/expedia/notebook/analyseDonnées.ipynb
+++ b/expedia/notebook/analyseDonnées.ipynb
@@ -94,7 +94,9 @@
    "outputs": [],
    "source": [
     "#read random train sample\n",
-    "train = pd.read_csv('../only_booking_train_sample.csv',index_col=0).dropna()"
+    "train = pd.read_csv('../sampled_not_booking.csv',index_col=0).dropna()\n",
+    "train.head(2)\n",
+    "len(train)"
    ]
   },
   {
@@ -105,7 +107,9 @@
    },
    "outputs": [],
    "source": [
-    "train_IsBooking = pd.read_csv('',index_col=0).dropna()"
+    "train_IsBooking = pd.read_csv('../sampled_booking.csv',index_col=0).dropna()\n",
+    "train.head(2)\n",
+    "len(train)"
    ]
   },
   {
