changement nom des duoHistogram

--- a/expedia/notebook/analyseDonnées.ipynb
+++ b/expedia/notebook/analyseDonnées.ipynb
@@ -94,9 +94,8 @@
    "outputs": [],
    "source": [
     "#read random train sample\n",
-    "train = pd.read_csv('../sampled_not_booking.csv',index_col=0).dropna()\n",
-    "train.head(2)\n",
-    "len(train)"
+    "train_NotBooking = pd.read_csv('../sampled_not_booking.csv',index_col=0).dropna()\n",
+    "print(\"length train_NotBooking : \",len(train_NotBooking))"
    ]
   },
   {
@@ -108,8 +107,7 @@
    "outputs": [],
    "source": [
     "train_IsBooking = pd.read_csv('../sampled_booking.csv',index_col=0).dropna()\n",
-    "train.head(2)\n",
-    "len(train)"
+    "print(\"length train_IsBooking : \",len(train_IsBooking))"
    ]
   },
   {
@@ -121,32 +119,32 @@
    },
    "outputs": [],
    "source": [
-    "train=train.reset_index()\n",
+    "train_NotBooking=train_NotBooking.reset_index()\n",
     "\n",
-    "train['date']=0\n",
+    "train_NotBooking['date']=0\n",
     "\n",
-    "for i in range(len(train)) :\n",
-    "    train['date'][i]=datetime.strptime(train['date_time'][i],'%Y-%m-%d %H:%M:%S')\n",
+    "for i in range(len(train_NotBooking)) :\n",
+    "    train_NotBooking['date'][i]=datetime.strptime(train_NotBooking['date_time'][i],'%Y-%m-%d %H:%M:%S')\n",
     "\n",
-    "train['dayOfWeek']=0\n",
+    "train_NotBooking['dayOfWeek']=0\n",
     "\n",
-    "for i in range(len(train)):\n",
-    "    train['dayOfWeek'][i]=train['date'][i].isoweekday()\n",
+    "for i in range(len(train_NotBooking)):\n",
+    "    train_NotBooking['dayOfWeek'][i]=train_NotBooking['date'][i].isoweekday()\n",
     "\n",
-    "train['year']=0\n",
+    "train_NotBooking['year']=0\n",
     "\n",
-    "for i in range(len(train)):\n",
-    "    train['year'][i]=train['date'][i].year\n",
+    "for i in range(len(train_NotBooking)):\n",
+    "    train_NotBooking['year'][i]=train_NotBooking['date'][i].year\n",
     "\n",
-    "train['month']=0\n",
+    "train_NotBooking['month']=0\n",
     "\n",
-    "for i in range(len(train)):\n",
-    "    train['month'][i]=train['date'][i].month\n",
+    "for i in range(len(train_NotBooking)):\n",
+    "    train_NotBooking['month'][i]=train_NotBooking['date'][i].month\n",
     "\n",
-    "train['day']=0\n",
+    "train_NotBooking['day']=0\n",
     "\n",
-    "for i in range(len(train)):\n",
-    "    train['day'][i]=train['date'][i].day"
+    "for i in range(len(train_NotBooking)):\n",
+    "    train_NotBooking['day'][i]=train_NotBooking['date'][i].day"
    ]
   },
   {
@@ -226,13 +224,11 @@
     "def duoHistogram(dataFrameIsBooking,dataframe,data_name):\n",
     "    histoBooking = go.Histogram(\n",
     "        x=dataframe[data_name],\n",
-    "        opacity=0.75,\n",
-    "        name='all'        \n",
+    "        name='Not Booking'        \n",
     "    )\n",
     "    histoAll = go.Histogram(\n",
     "        x=dataFrameIsBooking[data_name],\n",
-    "        opacity=0.75,\n",
-    "        name='isBooking',\n",
+    "        name='Booking',\n",
     "        \n",
     "    )\n",
     "    data=[histoBooking,histoAll]\n",
@@ -244,13 +240,13 @@
     "    yaxis=dict(\n",
     "        title='Count'\n",
     "    ),\n",
-    "    barmode='overlay',\n",
+    "    barmode='stack',\n",
     "    bargap=0.25,\n",
     "    bargroupgap=0.3\n",
     "    )\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
     "    py.plot(fig, filename='../histogram/duoHistogram/'+data_name+'Histogram.html')\n",
-    "    py.iplot(fig)"
+    "   # py.iplot(fig)"
    ]
   },
   {
@@ -317,8 +313,8 @@
     }
    ],
    "source": [
-    "for name in train.columns:\n",
-    "    duoHistogram(train_IsBooking,train,name)"
+    "for name in train_NotBooking.columns:\n",
+    "    duoHistogram(train_IsBooking,train_NotBooking,name)"
    ]
   }
  ],
