--- a/expedia/notebook/analyseDonnées.ipynb
+++ b/expedia/notebook/analyseDonnées.ipynb
@@ -224,10 +224,12 @@
     "def duoHistogram(dataFrameIsBooking,dataframe,data_name):\n",
     "    histoBooking = go.Histogram(\n",
     "        x=dataframe[data_name],\n",
+    "        opacity=0.75,\n",
     "        name='Not Booking'        \n",
     "    )\n",
     "    histoAll = go.Histogram(\n",
     "        x=dataFrameIsBooking[data_name],\n",
+    "        opacity=0.75,\n",
     "        name='Booking',\n",
     "        \n",
     "    )\n",
@@ -240,7 +242,7 @@
     "    yaxis=dict(\n",
     "        title='Count'\n",
     "    ),\n",
-    "    barmode='stack',\n",
+    "    barmode='overlay',\n",
     "    bargap=0.25,\n",
     "    bargroupgap=0.3\n",
     "    )\n",
