--- a/expedia/notebook/analyseDonnées.ipynb
+++ b/expedia/notebook/analyseDonnées.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -87,11 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length train_NotBooking :  99889\n"
+     ]
+    }
+   ],
    "source": [
     "#read random train sample\n",
     "train_NotBooking = pd.read_csv('../sampled_not_booking.csv',index_col=0).dropna()\n",
@@ -100,11 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length train_IsBooking :  100000\n"
+     ]
+    }
+   ],
    "source": [
     "train_IsBooking = pd.read_csv('../sampled_booking.csv',index_col=0).dropna()\n",
     "print(\"length train_IsBooking : \",len(train_IsBooking))"
@@ -112,7 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train_IsBooking.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -185,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -209,13 +236,13 @@
     "    bargroupgap=0.3\n",
     "    )\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
-    "    py.plot(fig, filename='histogram/histogramIsBooking'+data_name+'Histogram.html')\n",
+    "    #py.plot(fig, filename='histogram/histogramIsBooking'+data_name+'Histogram.html')\n",
     "    py.iplot(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -253,16 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def scatter(X,X_name,Y,Y_name,title):\n",
+    "def scatter(X,X_name,Y,Y_name,title='scatter plot '):\n",
     "    trace = go.Scatter(\n",
-    "        x=list(X),\n",
-    "        y=list(Y),\n",
+    "        x=list(X[X_name]),\n",
+    "        y=list(Y[Y_name]),\n",
     "        mode = 'markers'\n",
     "    )\n",
     "    layout = go.Layout(\n",
@@ -290,34 +317,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "#create all duoHistograms : \n",
+    "#for name in train_NotBooking.columns:\n",
+    "#    duoHistogram(train_IsBooking,train_NotBooking,name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>site_name</th>\n",
+       "      <th>posa_continent</th>\n",
+       "      <th>user_location_country</th>\n",
+       "      <th>user_location_region</th>\n",
+       "      <th>user_location_city</th>\n",
+       "      <th>orig_destination_distance</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>is_mobile</th>\n",
+       "      <th>is_package</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>...</th>\n",
+       "      <th>srch_children_cnt</th>\n",
+       "      <th>srch_rm_cnt</th>\n",
+       "      <th>srch_destination_id</th>\n",
+       "      <th>srch_destination_type_id</th>\n",
+       "      <th>is_booking</th>\n",
+       "      <th>cnt</th>\n",
+       "      <th>hotel_continent</th>\n",
+       "      <th>hotel_country</th>\n",
+       "      <th>hotel_market</th>\n",
+       "      <th>hotel_cluster</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-10-27 13:39:33</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46</td>\n",
+       "      <td>172</td>\n",
+       "      <td>56153</td>\n",
+       "      <td>523.2884</td>\n",
+       "      <td>1170099</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8234</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-03-11 13:58:30</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>66</td>\n",
+       "      <td>258</td>\n",
+       "      <td>19630</td>\n",
+       "      <td>5487.9354</td>\n",
+       "      <td>320859</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28610</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>22</td>\n",
+       "      <td>245</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-16 11:56:46</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>66</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5444</td>\n",
+       "      <td>6.5692</td>\n",
+       "      <td>711936</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12008</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>686</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-29 11:23:18</th>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>205</td>\n",
+       "      <td>155</td>\n",
+       "      <td>9851</td>\n",
+       "      <td>1155.1877</td>\n",
+       "      <td>265991</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3373</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>970</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10-15 11:31:11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>66</td>\n",
+       "      <td>467</td>\n",
+       "      <td>30092</td>\n",
+       "      <td>1099.2807</td>\n",
+       "      <td>1016380</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26981</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>409</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['date_time', 'site_name', 'posa_continent', 'user_location_country',\n",
-       "       'user_location_region', 'user_location_city',\n",
-       "       'orig_destination_distance', 'user_id', 'is_mobile', 'is_package',\n",
-       "       'channel', 'srch_ci', 'srch_co', 'srch_adults_cnt', 'srch_children_cnt',\n",
-       "       'srch_rm_cnt', 'srch_destination_id', 'srch_destination_type_id', 'cnt',\n",
-       "       'hotel_continent', 'hotel_country', 'hotel_market', 'hotel_cluster',\n",
-       "       'date', 'dayOfWeek', 'year', 'month', 'day'],\n",
-       "      dtype='object')"
+       "                     site_name  posa_continent  user_location_country  \\\n",
+       "date_time                                                               \n",
+       "2014-10-27 13:39:33         13               1                     46   \n",
+       "2013-03-11 13:58:30          2               3                     66   \n",
+       "2014-01-16 11:56:46          2               3                     66   \n",
+       "2014-01-29 11:23:18         34               3                    205   \n",
+       "2013-10-15 11:31:11          2               3                     66   \n",
+       "\n",
+       "                     user_location_region  user_location_city  \\\n",
+       "date_time                                                       \n",
+       "2014-10-27 13:39:33                   172               56153   \n",
+       "2013-03-11 13:58:30                   258               19630   \n",
+       "2014-01-16 11:56:46                   220                5444   \n",
+       "2014-01-29 11:23:18                   155                9851   \n",
+       "2013-10-15 11:31:11                   467               30092   \n",
+       "\n",
+       "                     orig_destination_distance  user_id  is_mobile  \\\n",
+       "date_time                                                            \n",
+       "2014-10-27 13:39:33                   523.2884  1170099          0   \n",
+       "2013-03-11 13:58:30                  5487.9354   320859          0   \n",
+       "2014-01-16 11:56:46                     6.5692   711936          0   \n",
+       "2014-01-29 11:23:18                  1155.1877   265991          0   \n",
+       "2013-10-15 11:31:11                  1099.2807  1016380          0   \n",
+       "\n",
+       "                     is_package  channel      ...       srch_children_cnt  \\\n",
+       "date_time                                     ...                           \n",
+       "2014-10-27 13:39:33           1        9      ...                       0   \n",
+       "2013-03-11 13:58:30           0        1      ...                       1   \n",
+       "2014-01-16 11:56:46           0        9      ...                       0   \n",
+       "2014-01-29 11:23:18           0        9      ...                       2   \n",
+       "2013-10-15 11:31:11           0        9      ...                       0   \n",
+       "\n",
+       "                    srch_rm_cnt  srch_destination_id  \\\n",
+       "date_time                                              \n",
+       "2014-10-27 13:39:33           1                 8234   \n",
+       "2013-03-11 13:58:30           1                28610   \n",
+       "2014-01-16 11:56:46           1                12008   \n",
+       "2014-01-29 11:23:18           1                 3373   \n",
+       "2013-10-15 11:31:11           1                26981   \n",
+       "\n",
+       "                     srch_destination_type_id  is_booking  cnt  \\\n",
+       "date_time                                                        \n",
+       "2014-10-27 13:39:33                         1           1    1   \n",
+       "2013-03-11 13:58:30                         6           1    1   \n",
+       "2014-01-16 11:56:46                         1           1    1   \n",
+       "2014-01-29 11:23:18                         3           1    1   \n",
+       "2013-10-15 11:31:11                         6           1    1   \n",
+       "\n",
+       "                     hotel_continent  hotel_country  hotel_market  \\\n",
+       "date_time                                                           \n",
+       "2014-10-27 13:39:33                6              7             8   \n",
+       "2013-03-11 13:58:30                6             22           245   \n",
+       "2014-01-16 11:56:46                2             50           686   \n",
+       "2014-01-29 11:23:18                2             50           970   \n",
+       "2013-10-15 11:31:11                2             50           409   \n",
+       "\n",
+       "                     hotel_cluster  \n",
+       "date_time                           \n",
+       "2014-10-27 13:39:33             91  \n",
+       "2013-03-11 13:58:30             22  \n",
+       "2014-01-16 11:56:46              6  \n",
+       "2014-01-29 11:23:18             48  \n",
+       "2013-10-15 11:31:11             13  \n",
+       "\n",
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for name in train_NotBooking.columns:\n",
-    "    duoHistogram(train_IsBooking,train_NotBooking,name)"
+    "train_IsBooking.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
