--- a/docs/rapport/rapport.tex
+++ b/docs/rapport/rapport.tex
@@ -12,6 +12,8 @@
 \fancyhf{}
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
+\usepackage{enumitem}
+\setlength{\parindent}{0cm}
 
 \renewcommand{\headrulewidth}{1pt}
 \fancyhead[R]{\textbf{page \thepage}} 
@@ -19,10 +21,15 @@
 % \geometry{landscape} % set up the page for landscape
 %   read geometry.pdf for detailed page layout information
 
-\title{Rapport du projet de spécialité}
+\title{ \normalsize \textsc{Projet de spécialité} \\
+	\vspace{15px}
+	\LARGE \textbf{\uppercase{Kaggle challenge}} \\
+	\vspace{15px}
+	\normalsize 10 juin 2016 \vspace*{5\baselineskip}}
+
 \author{Baillet Valérian\\Beaupère Matthias\\Fischman Adrien\\Meuret Thibault}
 %\date{\vspace{-1ex}}
-\date{10 juin 2016} % Activate to display a given date or no date (if empty),
+\date{} % Activate to display a given date or no date (if empty),
          % otherwise the current date is printed 
 
 \begin{document}
@@ -39,6 +46,9 @@
 Ce document permet de montrer le travail effectué par l'équipe kaggle n5. Il permet d'avoir des informations sur les données utilisées ainsi que les interprétations faites sur ces données. Il permet aussi de recenser les démarches empruntées et les algorithmes utilisés pour pouvoir répondre aux différents challenges kaggle.
 
 \section{Objectifs}
-Nous avons décidé de résoudre différents projets kaggle afin de comprendre le principe de prédiction sur un échantillon de données quand on possède un jeu de données d’entraînement. Cette étude s'inscrit dans le cursus de l'ENSIMAG en constituant une application concrète des cours de fouille de données et de systèmes intelligents. Ce document est composé de deux parties : une partie sur un sujet rapide pour se familiariser avec kaggle (bikesharing) et une partie sur un sujet avec un grand jeu de données (expedia hotels recommendations).
+Nous avons décidé de résoudre différents projets kaggle afin de comprendre le principe de prédiction sur un échantillon de données quand on possède un jeu de données d’entraînement. Cette étude s'inscrit dans le cursus de l'ENSIMAG en constituant une application concrète des cours de fouille de données et de systèmes intelligents. Ce document est composé de deux parties : une partie sur un sujet rapide pour se familiariser avec kaggle (bikesharing) et une partie sur un sujet avec un grand jeu de données (Expedia hotels recommendations).
+
+\include{chapitre1-bikesharing}
+\include{chapitre2-expedia}
 
 \end{document}
