--- a/docs/rapport/rapport.tex
+++ b/docs/rapport/rapport.tex
@@ -13,9 +13,16 @@
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
 \usepackage{enumitem}
+\usepackage{graphicx}
 \setlength{\parindent}{0cm} % Retire les indentation en début de paragraphe
 \makeatletter
 \@addtoreset{section}{part}
+\usepackage{hyperref}
+\usepackage{caption}
+\usepackage{verbatim}
+\usepackage[]{algorithm2e}
+\usepackage{array}
+
 
 \renewcommand{\headrulewidth}{1pt}
 \fancyhead[R]{\textbf{page \thepage}} 
