modification max_depth

--- a/bikeshare/XGBoost.ipynb
+++ b/bikeshare/XGBoost.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -249,17 +249,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  16.24919891    3.98038197    2.7571137  ...,  112.32699585   86.97667694\n",
-      "   35.8093071 ]\n"
+      "[  12.64819908    4.28795052    3.14082789 ...,  104.15394592   97.99105835\n",
+      "   37.09075165]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5764a21240>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f576378d748>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
     "X_train = train.drop(\"count\",1)\n",
     "Y_train = train['count']\n",
     "T_train_xgb = xgb.DMatrix(X_train, Y_train)\n",
-    "params = {\"objective\": \"reg:linear\",'bst:max_depth':9,\"booster\":\"gbtree\" }\n",
+    "params = {\"objective\": \"reg:linear\",'bst:max_depth':13,\"booster\":\"gbtree\" }\n",
     "gbm = xgb.train(dtrain=T_train_xgb, params = params)\n",
     "X_test = xgb.DMatrix(test)\n",
     "Y_pred = gbm.predict(X_test)\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
